SensorController also supports sending of messages

--- a/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.vcproj
+++ b/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.vcproj
@@ -258,6 +258,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\ISensorCommands.h"
+				>
+			</File>
+			<File
 				RelativePath=".\ISensorEvents.h"
 				>
 			</File>
