Establishment Topology added

--- a/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.vcproj
+++ b/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.vcproj
@@ -196,6 +196,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\EstablishmentTopology.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\geometry.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\PositioningManager.cpp"
 				>
 			</File>
@@ -247,6 +255,10 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<File
+				RelativePath=".\Utils.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -255,6 +267,14 @@
 			>
 			<File
 				RelativePath=".\BlueMagicBTBMessages.h"
+				>
+			</File>
+			<File
+				RelativePath=".\EstablishmentTopology.h"
+				>
+			</File>
+			<File
+				RelativePath=".\geometry.h"
 				>
 			</File>
 			<File
@@ -303,6 +323,10 @@
 			</File>
 			<File
 				RelativePath=".\stdafx.h"
+				>
+			</File>
+			<File
+				RelativePath=".\utils.h"
 				>
 			</File>
 		</Filter>
