0. Each SensorController also suports CHILDs (Remote Sensors) in a tree structure 1. ScanFile created per Sensor (Remote or Controller) and all Data from that sensor is saved to its own ScanFile (with timestamp) 2. CList<SScannedData> -> SScannedData everywhere. 3. SScannedData -> SScannedData + SensorID everywhere. 4. SensorController notifies PositionManager of every registered Sensor (Remote or Controller) 5. Clock calculation fixed. 6. Handshake mechanism enahanced to support multiple Sensors per Sensor Controller 7. KeepAlive mechanism enahanced to support multiple Sensors per Sensor Controller

--- a/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.vcproj
+++ b/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.vcproj
@@ -338,6 +338,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\SensorInformation.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Serial.h"
 				>
 			</File>
