1. New Mechanism: Sending Messages from PostitiongManager to PositioningManagerDlg

--- a/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.vcproj
+++ b/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.vcproj
@@ -286,6 +286,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\DialogMessages.h"
+				>
+			</File>
+			<File
 				RelativePath=".\EstablishmentTopology.h"
 				>
 			</File>
