GUI: Added ScanList to Positioning Dialog !! Also, Fixed timeformat across module

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@
 */release/
 /release/
 /ApplicationLogs/
+/ScanFiles/
 
 # Specific uniteresting file names:
 # -------------------------------------
