--- a/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.rc
+++ b/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.rc
@@ -71,11 +71,13 @@ IDR_MAINFRAME           ICON                    "res\\PositioningModule.ico"
 // Dialog
 //
 
-IDD_POSITIONINGMODULE_DIALOG DIALOGEX 0, 0, 146, 200
+IDD_POSITIONINGMODULE_DIALOG DIALOGEX 0, 0, 250, 245
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE
 EXSTYLE WS_EX_APPWINDOW
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
+    CONTROL         "",IDC_SCAN_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,222,155
+    GROUPBOX        "Discovered BT devices",IDC_STATIC,7,14,236,204,0,WS_EX_TRANSPARENT
 END
 
 
@@ -129,9 +131,9 @@ BEGIN
     IDD_POSITIONINGMODULE_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 139
+        RIGHTMARGIN, 243
         TOPMARGIN, 7
-        BOTTOMMARGIN, 193
+        BOTTOMMARGIN, 238
     END
 END
 #endif    // APSTUDIO_INVOKED
