--- a/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.rc
+++ b/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.rc
@@ -71,13 +71,22 @@ IDR_MAINFRAME           ICON                    "res\\PositioningModule.ico"
 // Dialog
 //
 
-IDD_POSITIONINGMODULE_DIALOG DIALOGEX 0, 0, 250, 245
+IDD_POSITIONINGMODULE_DIALOG DIALOGEX 0, 0, 295, 245
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE
 EXSTYLE WS_EX_APPWINDOW
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_SCAN_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,222,155
-    GROUPBOX        "Discovered BT devices",IDC_STATIC,7,14,236,204,0,WS_EX_TRANSPARENT
+    CONTROL         "",IDC_SCAN_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,267,155
+    GROUPBOX        "Discovered BT devices",IDC_STATIC,7,14,281,204,0,WS_EX_TRANSPARENT
+END
+
+IDD_SENSOR_STATUS_DIALOG DIALOGEX 0, 0, 295, 226
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
+EXSTYLE WS_EX_APPWINDOW
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    CONTROL         "",IDC_SENSORS_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,265,169
+    GROUPBOX        "Sensors Status:",IDC_STATIC,7,14,281,204,0,WS_EX_TRANSPARENT
 END
 
 
@@ -131,9 +140,17 @@ BEGIN
     IDD_POSITIONINGMODULE_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 243
+        RIGHTMARGIN, 288
         TOPMARGIN, 7
         BOTTOMMARGIN, 238
+    END
+
+    IDD_SENSOR_STATUS_DIALOG, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 288
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 219
     END
 END
 #endif    // APSTUDIO_INVOKED
