--- a/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.rc
+++ b/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.rc
@@ -71,31 +71,37 @@ IDR_MAINFRAME           ICON                    "res\\PositioningModule.ico"
 // Dialog
 //
 
-IDD_POSITIONINGMODULE_DIALOG DIALOGEX 0, 0, 295, 245
+IDD_POSITIONINGMODULE_DIALOG DIALOGEX 0, 0, 307, 245
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE
 EXSTYLE WS_EX_APPWINDOW
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_SCAN_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,267,155
-    GROUPBOX        "Discovered BT devices",IDC_STATIC,7,14,281,204,0,WS_EX_TRANSPARENT
+    CONTROL         "",IDC_SCAN_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,279,155
+    GROUPBOX        "Discovered BT devices",IDC_STATIC,7,14,293,204,0,WS_EX_TRANSPARENT
 END
 
-IDD_SENSOR_STATUS_DIALOG DIALOGEX 0, 0, 295, 226
+IDD_SENSOR_STATUS_DIALOG DIALOGEX 0, 0, 307, 226
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 EXSTYLE WS_EX_APPWINDOW
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_SENSORS_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,265,169
-    GROUPBOX        "Sensors Status:",IDC_STATIC,7,14,281,204,0,WS_EX_TRANSPARENT
+    CONTROL         "",IDC_SENSORS_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,279,169
+    GROUPBOX        "Sensors Status:",IDC_STATIC,7,14,293,204,0,WS_EX_TRANSPARENT
 END
 
-IDD_DISTANCE_MEASUREMENTS DIALOGEX 0, 0, 295, 226
+IDD_DISTANCE_MEASUREMENTS DIALOGEX 0, 0, 307, 301
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 EXSTYLE WS_EX_APPWINDOW
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_MEASUREMENTS_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,265,169
-    GROUPBOX        "Distance Measurements",IDC_STATIC,7,14,281,204,0,WS_EX_TRANSPARENT
+    CONTROL         "",IDC_MEASUREMENTS_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,279,169
+    GROUPBOX        "Distance Measurements",IDC_STATIC,7,14,293,204,0,WS_EX_TRANSPARENT
+    GROUPBOX        "Smoothing Parameters",IDC_STATIC,7,230,293,35
+    LTEXT           "a:",IDC_STATIC,17,246,8,12
+    EDITTEXT        IDC_A_PARAM_EDIT,30,245,76,14,ES_AUTOHSCROLL
+    LTEXT           "b:",IDC_STATIC,121,247,8,12
+    EDITTEXT        IDC_B_PARAM_EDIT,133,245,76,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "Update",IDC_BUTTON1,223,244,54,15
 END
 
 
@@ -149,7 +155,7 @@ BEGIN
     IDD_POSITIONINGMODULE_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 288
+        RIGHTMARGIN, 300
         TOPMARGIN, 7
         BOTTOMMARGIN, 238
     END
@@ -157,7 +163,7 @@ BEGIN
     IDD_SENSOR_STATUS_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 288
+        RIGHTMARGIN, 300
         TOPMARGIN, 7
         BOTTOMMARGIN, 219
     END
@@ -165,9 +171,9 @@ BEGIN
     IDD_DISTANCE_MEASUREMENTS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 288
+        RIGHTMARGIN, 300
         TOPMARGIN, 6
-        BOTTOMMARGIN, 219
+        BOTTOMMARGIN, 294
     END
 END
 #endif    // APSTUDIO_INVOKED
