Beta version 	* One version for all dongles - root, bridge and slave 	* Disable scan until handshaked 	* Root - Wait for connection, Handshake, Scan, Connect to sons, Repeat, If disconnected - just scan to file 	* Bridge - Wait for connection, Handshake, Scan, Connect to sons, Disconnect, Repeat 	* Slave - Wait for connection, Handshake, Scan, Disconnect, Repeat
Fixes/Improvements:
	* Discoverable at startup now timed to readcnt
	* Don't save to file if connected to slave (for root)
	* Wait for input right after connection
	* Initialization flag
	* Input handler

--- a/AirCable/params.cfg
+++ b/AirCable/params.cfg
@@ -1,2 +1,10 @@
 0 REM SENSOR_ID
 4 N = 3
+0 REM IS ROOT
+5 M = 0
+0 REM SLAVE ADDRESS
+500 
+
+501 0025BF100308
+502 0025BF100359
+503 0025BF100357
