Measurements are gathered, handled, and sliced in time !
ScannedBDADDRESSDataBase Completed, Also PositioningAlgorithm functions.
Measurements Handling and Slicing in Time Domain

--- a/BlueMagic/BlueMagicLogic/PositioningAlgorithms/PositioningAlgorithms.vcproj
+++ b/BlueMagic/BlueMagicLogic/PositioningAlgorithms/PositioningAlgorithms.vcproj
@@ -186,7 +186,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\IPositioningAlgorithmImplementation.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Matrix.h"
+				>
+			</File>
+			<File
+				RelativePath=".\PositioningAlgorithmBasicImplementation.h"
 				>
 			</File>
 			<File
@@ -232,6 +240,10 @@
 			</File>
 			<File
 				RelativePath=".\Matrix.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\PositioningAlgorithmBasicImplementation.cpp"
 				>
 			</File>
 			<File
