Working Version updated

--- a/BlueMagic/Working Version/PositioningModuleApp.ini
+++ b/BlueMagic/Working Version/PositioningModuleApp.ini
@@ -9,10 +9,12 @@ PrintDebugMsgs=TRUE
 LogSeverity=0
 PrintOutputDebugString=FALSE
 BreakOnAssert=TRUE
+LogBaseName=PositioningModuleApp
+AddComputerNameToLogFileName=FALSE
 
 [TraceDlg_PositioningModuleApp]
 LogLevel=1
-Rect=27,56,1253,563
+Rect=30,92,1256,599
 Show=1
 Origin=-1,-1
 
@@ -20,28 +22,46 @@ Origin=-1,-1
 ThreadPerformanceLogFrequency=60
 ThreadPerformanceLogLevel=1
 
+[GeneralSensorsConfiguration]
+TimeBetweenConnectionAttempts=10000
+TimeBetweenHandshakeAttempts=10000
+AllowedTimeBetweenKeepAlives=60000
+StatusUpdateResolution=60000
+
+
 [SensorControllers]
-
 ;SensorController1=SensorID=1;ComPort=5;BDADDRESS=0025BF100308;Children=None
-SensorController2=SensorID=2;ComPort=8;BDADDRESS=0025BF100359;Children=3
+SensorController2=SensorID=2;ComPort=8;BDADDRESS=0025BF100359;Children=1
 ;SensorController3=SensorID=3;ComPort=9;BDADDRESS=0025BF100357;Children=None
-
 
 ;SensorController1=SensorID=1;ComPort=5;BDADDRESS=0025BF100308;Children=2
 ;SensorController2=SensorID=2;ComPort=8;BDADDRESS=0025BF100359;Children=1,3
 ;SensorController3=SensorID=3;ComPort=9;BDADDRESS=0025BF100357;Children=None
 
 [RemoteSensors]
-RemoteSensor1=SensorID=1;BDADDRESS=0025BF100308;Children=None
-RemoteSensor2=SensorID=2;BDADDRESS=0025BF100359;Children=3
+RemoteSensor1=SensorID=1;BDADDRESS=0025BF100308;Children=3
+RemoteSensor2=SensorID=2;BDADDRESS=0025BF100359;Children=None
 RemoteSensor3=SensorID=3;BDADDRESS=0025BF100357;Children=None
+
 
 [EstablishmentTopology]
 EstablishmentID=1
 EstablishmentContourFileName="EstablishmentContour.dat"
 SensorsArrayContourFileName="SensorsArrayContour.dat"
-[GeneralSensorsConfiguration]
-TimeBetweenConnectionAttempts=5000
-TimeBetweenHandshakeAttempts=10000
-AllowedTimeBetweenKeepAlives=60000
-StatusUpdateResolution=60000
+
+[DistanceMeasurementsParams]
+Sensor1=SensorID=1,A=-57.5,N=4
+Sensor2=SensorID=2,A=-57.5,N=4
+Sensor3=SensorID=3,A=-57.5,N=4
+a=1
+b=1
+
+[PositioningParameters]
+MinimumNumberOfSensorsForPositioning=3
+DesiredNumberOfParticipatingSensor=3
+MaximumTimeBetweenUpdates=9000
+TimeoutForRemovingBdaddress=120000
+MaxTickCountDifferenceBetweenMeasuremnts=10000
+DesiredTickCountDifferenceBetweenMeasuremnts=10000
+[General]
+RefreshTime=60
