--- a/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.rc
+++ b/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.rc
@@ -76,7 +76,7 @@ STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE
 EXSTYLE WS_EX_APPWINDOW
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_SCAN_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,279,155
+    CONTROL         "",IDC_SCAN_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,279,180
     GROUPBOX        "Discovered BT devices",IDC_STATIC,7,14,293,204,0,WS_EX_TRANSPARENT
 END
 
@@ -85,7 +85,7 @@ STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 EXSTYLE WS_EX_APPWINDOW
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_SENSORS_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,279,169
+    CONTROL         "",IDC_SENSORS_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,279,180
     GROUPBOX        "Sensors Status:",IDC_STATIC,7,14,293,204,0,WS_EX_TRANSPARENT
 END
 
@@ -94,7 +94,7 @@ STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 EXSTYLE WS_EX_APPWINDOW
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_MEASUREMENTS_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,279,169
+    CONTROL         "",IDC_MEASUREMENTS_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,279,180
     GROUPBOX        "Distance Measurements",IDC_STATIC,7,14,293,204,0,WS_EX_TRANSPARENT
     GROUPBOX        "Smoothing Parameters",IDC_STATIC,7,230,293,35
     LTEXT           "a:",IDC_STATIC,17,246,8,12
@@ -102,6 +102,15 @@ BEGIN
     LTEXT           "b:",IDC_STATIC,121,247,8,12
     EDITTEXT        IDC_B_PARAM_EDIT,133,245,76,14,ES_AUTOHSCROLL
     PUSHBUTTON      "Update",IDC_BUTTON1,223,244,54,15
+END
+
+IDD_POSITIONING_ESTIMATION_DIALOG DIALOGEX 0, 0, 307, 226
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
+EXSTYLE WS_EX_APPWINDOW
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    CONTROL         "",IDC_POSITION_ESTIMATIONS_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,279,180
+    GROUPBOX        "Positioning Estimations:",IDC_STATIC,7,14,293,204,0,WS_EX_TRANSPARENT
 END
 
 
@@ -174,6 +183,14 @@ BEGIN
         RIGHTMARGIN, 300
         TOPMARGIN, 6
         BOTTOMMARGIN, 294
+    END
+
+    IDD_POSITIONING_ESTIMATION_DIALOG, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 300
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 219
     END
 END
 #endif    // APSTUDIO_INVOKED
