--- a/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.vcproj
+++ b/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.vcproj
@@ -221,6 +221,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\PositioningEstimationDlg.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\PositioningManager.cpp"
 				>
 			</File>
@@ -340,6 +344,10 @@
 			</File>
 			<File
 				RelativePath=".\PositioningAlgorithm.h"
+				>
+			</File>
+			<File
+				RelativePath=".\PositioningEstimationDlg.h"
 				>
 			</File>
 			<File
