New Working Version

--- a/BlueMagic/Working Version/PositioningModuleApp.ini
+++ b/BlueMagic/Working Version/PositioningModuleApp.ini
@@ -14,7 +14,7 @@ AddComputerNameToLogFileName=FALSE
 
 [TraceDlg_PositioningModuleApp]
 LogLevel=1
-Rect=30,92,1256,599
+Rect=8,11,1234,626
 Show=1
 Origin=-1,-1
 
@@ -59,9 +59,22 @@ b=1
 [PositioningParameters]
 MinimumNumberOfSensorsForPositioning=3
 DesiredNumberOfParticipatingSensor=3
-MaximumTimeBetweenUpdates=9000
+MaximumTimeBetweenUpdates=45000
 TimeoutForRemovingBdaddress=120000
 MaxTickCountDifferenceBetweenMeasuremnts=10000
-DesiredTickCountDifferenceBetweenMeasuremnts=10000
+DesiredTickCountDifferenceBetweenMeasuremnts=5000
+UpdateTimeoutResolution=10000
+CleaningTimeoutResolution=10000
+InitialPosition_X=5.0
+InitialPosition_Y=0.0
+MaxAcceptablePositioningError=1
+MaxNumberOfIterations=100
+MinNumberOfParticipatingSensor=3
+
+[SensorsPositioningParameters]
+Sensor1=SensorID=1,A=-57.5,N=4,a=1,b=1,x=0,y=0
+Sensor2=SensorID=2,A=-57.5,N=4,a=1,b=1,x=10,y=0
+Sensor3=SensorID=3,A=-57.5,N=4,a=1,b=1,x=0,y=10
+
 [General]
 RefreshTime=60
