GUI: DRAWING User Location in PositioningEstimation Module (GRPAH)

--- a/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.vcproj
+++ b/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.vcproj
@@ -237,6 +237,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\RectReal.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\ScannedBdAdressesDataBase.cpp"
 				>
 			</File>
@@ -360,6 +364,10 @@
 			</File>
 			<File
 				RelativePath=".\PositioningModuleDlg.h"
+				>
+			</File>
+			<File
+				RelativePath=".\RectReal.h"
 				>
 			</File>
 			<File
