--- a/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.rc
+++ b/BlueMagic/BlueMagicLogic/PositioningModule/PositioningModule.rc
@@ -104,13 +104,14 @@ BEGIN
     PUSHBUTTON      "Update",IDC_BUTTON1,223,244,54,15
 END
 
-IDD_POSITIONING_ESTIMATION_DIALOG DIALOGEX 0, 0, 307, 226
+IDD_POSITIONING_ESTIMATION_DIALOG DIALOGEX 0, 0, 307, 421
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 EXSTYLE WS_EX_APPWINDOW
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_POSITION_ESTIMATIONS_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,14,30,279,180
     GROUPBOX        "Positioning Estimations:",IDC_STATIC,7,14,293,204,0,WS_EX_TRANSPARENT
+    GROUPBOX        "Graph:",IDC_GRAPH_FRAME,7,228,293,168,0,WS_EX_TRANSPARENT
 END
 
 
@@ -190,7 +191,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 300
         TOPMARGIN, 7
-        BOTTOMMARGIN, 219
+        BOTTOMMARGIN, 414
     END
 END
 #endif    // APSTUDIO_INVOKED
